--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/bala9299/DataCleaningProjectNashvilleHousingData/edit/main/nashville%20housing%20data%20cleaning.sql" class="image fit"><img src="images/nash.jpg" alt="" /></a>
-									<p>I showcase my data cleaning expertise using Python with the FIFA 21 dataset from Kaggle. 
-										I've meticulously cleaned and transformed this raw data, handling missing values, duplicates, ensuring its readiness for analysis.
-										This project highlights my commitment to data quality and preparation.
+									<p>I successfully completed a data cleaning project utilizing SQL with the Nashville Housing Dataset. 
+										This project involved performing various data operations, including joins, updates, alterations, drops, and counts. 
+										This project showcases my proficiency in data cleaning and SQL data manipulation techniques.
 										 
 										</p>
 									<ul class="actions special">
@@ -132,8 +132,9 @@
 										
 									</header>
 									<a href="https://github.com/bala9299/DataCleaningFIFA21/blob/main/Fifa21.ipynb" class="image fit"><img src="images/fifa21.jpg" alt="" /></a>
-									<p> I conducted data exploration with the COVID-19 dataset in SQL server. 
-										This project involved analyzing and summarizing the data to uncover key insights about the COVID-19 pandemic. 
+									<p> I showcase my data cleaning expertise using Python with the FIFA 21 dataset from Kaggle. 
+										I've meticulously cleaned and transformed this raw data, handling missing values, duplicates, ensuring its readiness for analysis.
+										This project highlights my commitment to data quality and preparation.
 										</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/bala9299/DataCleaningFIFA21/blob/main/Fifa21.ipynb" class="button">View Project</a></li>
